<resources>
    <string name="app_name">Wiwi</string>
    <string name="tv_frase">Música viva para personas en movimiento</string>
    <string name="button_play">PLAY</string>
    <string name="button_login">Login</string>
    <string name="tv_salut">Bienvenido a wiwi!</string>
    <string name="btn_register">Registrate</string>
    <string name="et_full_name">full name</string>
    <string name="et_correo_electronico">correo electronico</string>
    <string name="et_password"></string>
    <string name="et_password_confirm"></string>
    <string name="tv_pregunta_cuenta">¿Ya tienes una cuenta?</string>

    //Autenticacion
    <string name="title_active_login">Firebase Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Iniciar Sesion</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="text_signup">¿Aun no tienes una cuenta?</string>
    <string name="link_signup">Crear Cuenta</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="musicas">Ir a tu biblioteca</string>
    <string name="account_login">Ingresa con tu Cuenta</string>
    <string name="create_acc"> Crear una Cuenta</string>

</resources>